[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"

[dev-dependencies]
reqwest = "0.12.13"
